--- a/ed-vite/package.json
+++ b/ed-vite/package.json
@@ -9,7 +9,9 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@tailwindcss/vite": "^4.1.17",
     "leaflet": "^1.9.4",
+    "tailwindcss": "^4.1.17",
     "vue": "^3.5.24"
   },
   "devDependencies": {
