--- a/ed-vite/package.json
+++ b/ed-vite/package.json
@@ -12,7 +12,8 @@
     "@tailwindcss/vite": "^4.1.17",
     "leaflet": "^1.9.4",
     "tailwindcss": "^4.1.17",
-    "vue": "^3.5.24"
+    "vue": "^3.5.24",
+    "vue-router": "^4.6.3"
   },
   "devDependencies": {
     "@types/leaflet": "^1.9.21",
