--- a/ed-vite/.gitignore
+++ b/ed-vite/.gitignore
@@ -27,3 +27,13 @@ js/
 .env
 .DS_Store
 *.log
+
+# Vue/Vite auto-generated files (should never be committed)
+*.vue.js
+*.vue.d.ts
+*.d.ts
+main.js
+router.js
+App.vue.js
+.vite/
+
