--- a/ed-vite/tsconfig.app.json
+++ b/ed-vite/tsconfig.app.json
@@ -3,6 +3,7 @@
   "compilerOptions": {
     "composite": true,
     "baseUrl": ".",
+    "moduleResolution": "bundler",
     "paths": {
       "@/*": ["src/*"]
     },
@@ -13,8 +14,8 @@
     "strict": true,
     "esModuleInterop": true,
     "skipLibCheck": true,
-
-    "types": ["leaflet"]
+    "jsx": "preserve",
+    "types": ["leaflet", "node"]
   },
   "include": ["src/**/*.ts", "src/**/*.vue"]
 }
