--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,7 +2,8 @@ services:
   app:
     build: .
     ports:
-      - "8000:8000"
+      - "8000:8000"   # Laravel
+      - "5173:5173"   # Vite dev server
     volumes:
       - .:/var/www
     depends_on:
