--- a/.gitignore
+++ b/.gitignore
@@ -77,4 +77,6 @@ main.js
 start_frontend_and_backend.sh
 backend/database/migrations/2025_12_10_142940_create_contents_table.php
 start_docker.sh
-ed-vite/tsconfig.app.tsbuildinfo
+/ed-vite/tsconfig.app.tsbuildinfo
+/package-lock.json
+.docker_built
