--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -16,14 +16,9 @@ services:
       DB_DATABASE: croissant
       DB_USERNAME: laravel
       DB_PASSWORD: secret
-      CHOKIDAR_USEPOLLING: "true"   # <--- force Vite to use polling for hot reload
     command: >
-      sh -c "
-        cd /var/www/ed-vite &&
-        npm run dev -- --host 0.0.0.0 --port 5173 &
-        cd /var/www/backend &&
-        php artisan serve --host=0.0.0.0 --port=8000
-      "
+      sh -c "cd /var/www/ed-vite && npm run dev -- --host 0.0.0.0 --port 5173 & 
+        cd /var/www/backend && php artisan serve --host=0.0.0.0 --port=8000"
 
   db:
     image: mariadb:11.5
