--- a/.gitignore
+++ b/.gitignore
@@ -123,3 +123,5 @@ backend/croissant
 .laravel_done
 backend/croissant
 backend/database/migrations/2026_01_15_082937_testtodeletelater.php
+ed_project_croissant_team
+.setup_done
