--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,7 +8,7 @@ services:
     volumes:
       - ./backend:/var/www/backend
       - ./ed-vite:/var/www/ed-vite
-      - ed_vite_node_modules:/var/www/ed-vite/node_modules
+      - /var/www/ed-vite/node_modules   # container keeps its own node_modules
     depends_on:
       - db
     environment:
@@ -16,7 +16,7 @@ services:
       DB_DATABASE: croissant
       DB_USERNAME: laravel
       DB_PASSWORD: secret
-      CHOKIDAR_USEPOLLING: "true"
+      CHOKIDAR_USEPOLLING: "true"   # <--- force Vite to use polling for hot reload
     command: >
       sh -c "cd /var/www/ed-vite && npm run dev -- --host 0.0.0.0 --port 5173 & 
              cd /var/www/backend && php artisan serve --host=0.0.0.0 --port=8000"
@@ -50,7 +50,11 @@ services:
       MYSQL_PASSWORD: secret
     volumes:
       - dbdata:/var/lib/mysql
+    healthcheck:
+      test: ["CMD", "mysqladmin", "ping", "-h", "localhost", "-u", "root", "-proot"]
+      interval: 10s
+      timeout: 5s
+      retries: 3
 
 volumes:
   dbdata:
-  ed_vite_node_modules:
